<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.TeamNovus.AutoMessage</groupId>
	<artifactId>AutoMessage</artifactId>
	<name>AutoMessage</name>
	<version>2.5.6</version>
	<url>http://www.novuscraft.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spigotVersion>1.14.4-R0.1-SNAPSHOT</spigotVersion>
	</properties>

	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>${spigotVersion}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.6</version>
		</dependency>
	</dependencies>

	<build>
		<sourceDirectory>src/main/java</sourceDirectory>
		<defaultGoal>clean install</defaultGoal>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>12</release>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<!-- <targetPath>.</targetPath> -->
				<directory>src/main/resources/</directory>
				<filtering>true</filtering>
				<!-- <includes> -->
				<!-- <include>plugin.yml</include> -->
				<!-- </includes> -->
			</resource>
		</resources>
		<!-- <finalName>${project.name}-v${project.version}</finalName> -->
		<finalName>${project.name}</finalName>
	</build>
</project>
